--- a/HTML5手机上下翻动/index.html
+++ b/HTML5手机上下翻动/index.html
@@ -218,7 +218,7 @@
                                 <ul class="circle">
                                     <li>
                                         <img src="http://img1.cache.netease.com/catchpic/9/9D/9D91BC2E728209551ECFB9707EC61398.jpg" alt="">
-                                        <span>高圆圆</span>
+                                        <span>高圆</span>
                                     </li>
                                     <li>
                                         <img src="http://hair.fashionguide.com.tw/uploads/hair_pic/file/77678/hair_pics_file_1367574527.jpg" alt="">
