--- a/HTML5手机上下翻动/index.html
+++ b/HTML5手机上下翻动/index.html
@@ -154,8 +154,7 @@
                           
                         </svg> -->
                        <!--  <img src="images/33.jpg" id="cm" alt=""> -->
-                    <p id="w">可能这种告白太过直白和唐突了，但是决不是心血来潮，在安检护卫部办公楼培训的时候其实我已经在留意你了（不知道你是否有收到我的小眼神），尽管看到你的时候不形于情色，但是内心却有目光相触如电流划过心脏般的颤动。平日跟你接触不多，但能感觉你是个文静的女生，外表柔弱，内心却有不轻易表露的执着，与人相处也是小心翼翼的，轻怕伤害身边的人；对于刚接触的人，不时常袒露自己想法，但对于认同的人却又十分依赖。在这方面我感觉我们是同一类人，我想像保护自己一样保护你。在写这些话的时候，一边在脑海里浮现着你的身影，我一边揣测着你的想法，想着你看这段话的反应，想着你看完后的踌躇，想这你对我的接受与否……加上焦虑、激动又期盼的心情，我的脑子现在一片混乱……之所以在对你不十分了解的情况下向你表白，一是在枯燥的工作中，我感觉只有你唯一能牵动我的心；二是出于私心，不想让别人捷足先登；三是直觉告诉我你仿佛就是命中注定的人，我想知道你有这种感觉吗？“缘”字很难写，左缠右绕、上撇下捺才写的出来，在几十亿人的世界里，遇见你是何般幸运，我相信你是我要找的那一半，你能答应我的表白吗？（同意则回复'1'）
-                    【End】</p>
+                    <p id="w">可能这种告白太过直白和唐突了，但是决不是心血来潮，在安检护卫部办公楼培训的时候其实我已经在留意你了（不知道你是否有收到我的小眼神），尽管看到你的时候不形于情色，但是内心却有目光相触如电流划过心脏般的颤动。平日跟你接触不多，但能感觉你是个文静的女生，外表柔弱，内心却有不轻易表露的执着，与人相处也是小心翼翼的，轻怕伤害身边的人；对于刚接触的人，不时常袒露自己想法，但对于认同的人却又十分依赖。在这方面我感觉我们是同一类人，我想像保护自己一样保护你。在写这些话的时候，一边在脑海里浮现着你的身影，我一边揣测着你的想法，想着你看这段话的反应，想着你看完后的踌躇，想这你对我的接受与否……加上焦虑、激动又期盼的心情，我的脑子现在一片混乱……之所以在对你不十分了解的情况下向你表白，一是在枯燥的工作中，我感觉只有你唯一能牵动我的心；二是出于私心，不想让别人捷足先登；三是直觉告诉我你仿佛就是命中注定的人，我想知道你有这种感觉吗？“缘”字很难写，左缠右绕、上撇下捺才写的出来，在几十亿人的世界里，遇见你是何般幸运，我相信你是我要找的那一半，你能答应我的表白吗？（同意则回复)【End】</p>
                    <!--  <p><input type="button" onclick="window.location.href='#'" value="1" class="btn1"></p> -->
                     <audio src="music/twins.mp3" id="Jaudio" class="media-audio" autoplay preload loop="loop"></audio>  
                     <script type="text/javascript">
