--- a/HTML5手机上下翻动/index.html
+++ b/HTML5手机上下翻动/index.html
@@ -173,21 +173,21 @@
                             }, false);  
                             document.addEventListener("touchstart",play, false);  
                         }  
-                        audioAutoPlay('Faudio');
-                        audioAutoPlay('Jaudio');
+//                         audioAutoPlay('Faudio');
+//                         audioAutoPlay('Jaudio');
 
                         var Jaudio=document.getElementById('Jaudio')
                         var Faudio=document.getElementById('Faudio')
                         var sing=document.getElementById('sing')
 
-                        sing.mousemove=function(){
+                        sing.touchstart=function(){
                             Faudio.pause();
                             Jaudio.play();
                             return false;
                         };
 
                          var song1=document.getElementById('song1');
-                           song1.mousemove=function(){
+                           song1.touchstart=function(){
                             Faudio.play();
                            Jaudio.pause();
                            return false;
