--- a/HTML5手机上下翻动/index.html
+++ b/HTML5手机上下翻动/index.html
@@ -173,7 +173,7 @@
                             }, false);  
                             document.addEventListener("touchstart",play, false);  
                         }  
-//                         audioAutoPlay('Faudio');
+                           audioAutoPlay('Faudio');
 //                         audioAutoPlay('Jaudio');
 
                         var Jaudio=document.getElementById('Jaudio')
