--- a/HTML5手机上下翻动/index.html
+++ b/HTML5手机上下翻动/index.html
@@ -135,7 +135,7 @@
             </div>
             <div class="m-page m-bigTxt f-hide" data-page-type="bigTxt" data-statics="info_list" style="height: 907px;">
                 <div class="page-con j-txtWrap lazy-finish" id="sing" data-position="50% 50%" data-size="cover" style="background: rgb(233, 181, 0); background-size: cover; background-position: 50% 50%;">
-                    <p class="love">我喜欢你，<p class="namer">cmm</p></p>
+                    <p class="love">我喜欢你，<p class="namer">cm</p></p>
                 </div>
             </div>
             <div class="m-page m-bigTxt f-hide"  data-page-type="bigTxt" data-statics="info_list" style="height: 907px;">
