--- a/HTML5手机上下翻动/index.html
+++ b/HTML5手机上下翻动/index.html
@@ -51,7 +51,7 @@
             <div class="m-page m-bigTxt f-hide" data-page-type="bigTxt" data-statics="info_list" style="height:70%;">
                 <div class="page-con j-txtWrap lazy-finish" data-position="50% 50%" data-size="cover" style="background: rgb(233, 181, 0); background-size: cover; background-position: 50% 50%;">
                         <p class="first">首先——</p>
-                        <p class="name"><span class="name-span">我叫</span>李杰炎</p>
+                        <p class="name"><span class="name-span">我叫</span>李杰</p>
                 </div>
             </div>
             <div class="m-page m-bigTxt f-hide" data-page-type="bigTxt" data-statics="info_list" style="height:70%;">
