--- a/HTML5手机上下翻动/index.html
+++ b/HTML5手机上下翻动/index.html
@@ -167,7 +167,7 @@
                           
                         </svg> -->
                        <!--  <img src="images/33.jpg" id="cm" alt=""> -->
-                    <p id="w">可能这种告白过于直白和唐突，但是决不是心血来潮，在安检护卫部办公楼培训的时候其实我已经在留意你了（不知道你是否有收到我的小眼神），尽管看到你的时候不形于情色，但是内心却有目光相触如电流划过心脏般的颤动。平日跟你接触不多，但总是能够见到你，感觉你是个文静善良的女生，外表柔弱，内心却有不轻易表露的执着，与人相处也是小心翼翼的，轻怕伤害身边的人；对于刚接触的人，不时常袒露自己想法，但对于认同的人却又十分依赖；对于你，我有种同类人之间相吸引的感觉。在写下这些话的期间，我有一段时间没跟你联系，一是由于外界原因（工作、学校、制作网页因素等）；二是考虑怎样谨慎开始和处理一段心动的感情；虽然跟你联系少了，但是对你的感觉一直没曾动摇。每次打开这个网页的时候脑海里总是一边浮现着你的身影，一边揣测着你的想法，想着你看每段话的反应，想着你看完后的踌躇，想着你对我的感觉……加上焦虑、激动又期盼的心情，我的脑子一片混乱……之所以在相处不太多的情况下向你表白，一是在茫茫人海中，我感觉只有你是唯一能牵动我的心的人；二是出于私心，不想让别人捷足先登；三是相遇不易，心动更难；“缘”字很难写，要左缠右绕、上撇下捺才能写得出来，在七十亿人的世界里，遇见你是何般幸运，我想珍惜我们相遇的机会，我相信你是我要找的另一半，你又能否与我携手？【End】</p>
+                    <p id="w">可能这种告白过于直白和唐突，但是决不是心血来潮，在安检护卫部办公楼培训的时候其实我已经在留意你了（不知道你是否有收到我的小眼神），尽管看到你的时候不形于情色，但是内心却有目光相触如电流划过心脏般的颤动。平日跟你接触不多，但总是能够见到你，感觉你是个文静善良的女生，外表柔弱，内心却有不轻易表露的执着，与人相处也是小心翼翼的，轻怕伤害身边的人；对于刚接触的人，不时常袒露自己想法，但对于认同的人却又十分依赖；对于你，我有种同类人之间相吸引的感觉。在写下这些话的期间，我有一段时间没跟你联系，一是由于外界原因（工作、学校、制作网页等因素）；二是考虑怎样谨慎开始和处理一段心动的感情；虽然跟你联系少了，但是对你的感觉一直没曾动摇。每次打开这个网页的时候脑海里总是一边浮现着你的身影，一边揣测着你的想法，想着你看每段话的反应，想着你看完后的踌躇，想着你对我的感觉……加上焦虑、激动又期盼的心情，我的脑子一片混乱……之所以在相处不太多的情况下向你表白，一是在茫茫人海中，我感觉只有你是唯一能牵动我的心的人；二是出于私心，不想让别人捷足先登；三是相遇不易，心动更难；“缘”字很难写，要左缠右绕、上撇下捺才能写得出来，在七十亿人的世界里，遇见你是何般幸运，我想珍惜我们相遇的机会，我相信你是我要找的另一半，你又能否与我携手？【End】</p>
                    <!--  <p><input type="button" onclick="window.location.href='#'" value="1" class="btn1"></p> -->
                     <audio src="music/twins.mp3" id="Jaudio" class="media-audio" autoplay preload loop="loop"></audio>  
                     <script type="text/javascript">
